--- a/t09/Cargo.toml
+++ b/t09/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
-name = "t09"
-version = "0.1.0"
 edition = "2021"
+name    = "t09"
+version = "0.1.0"
 
 [dependencies]
+anyhow    = { workspace = true }
+itertools = { workspace = true }
