--- a/t01/Cargo.toml
+++ b/t01/Cargo.toml
@@ -23,7 +23,7 @@ serde             = { version = "1.0", features = ["serde_derive"] }
 serde_json        = { version = "1.0" }
 thiserror         = { version = "2.0.8" }
 tokio             = { version = "1", features = ["full"] }
-tokio-postgres    = { version = "0.7" }
+tokio-postgres    = { version = "0.7", features = ["with-chrono-0_4"] }
 tower-http        = { version = "0.6.2", features = ["full"] }
 ulid              = { version = "1.1.3", features = ["postgres", "serde"] }
 url               = { version = "2.5" }
