mini-social-network

--- a/t01/.env
+++ b/t01/.env
@@ -7,6 +7,8 @@ PGHOST="postgres"
 PGPORT="5432"
 PGUSER="admin"
 PGPASSWORD="admin"
-PGDATABASE="t01"
+PGDATABASE="mini_social_network"
 
-DATABASE_URL="postgres://admin:admin@127.0.0.1:5432/t01"
+JWT_SECRET="secret_key"
+
+DATABASE_URL="postgres://admin:admin@127.0.0.1:5432/mini_social_network"
