--- a/t01/Dockerfile
+++ b/t01/Dockerfile
@@ -10,15 +10,15 @@ RUN --mount=type=cache,id=rust-build,target=/app/target \
     --mount=type=cache,id=cargo-git,target=/usr/local/cargo/git \
     --mount=type=cache,id=registry,target=/usr/local/cargo/registry \
     cargo build --target-dir /app/target \
-    && cp /app/target/debug/t01 /app/bin
+    && cp /app/target/debug/mini_social_network /app/bin
 
 FROM debian:bullseye
 
 WORKDIR /app
 
-COPY --from=build /app/bin/t01 /app/bin/t01
+COPY --from=build /app/bin/mini_social_network /app/bin/mini_social_network
 
-COPY --from=build /app/templates /app/templates
+COPY --from=build /app/static /app/static
 
 EXPOSE 3000
-CMD [ "/app/bin/t01" ]
+CMD [ "/app/bin/mini_social_network" ]
